--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "bin": "npm/electerm",
   "scripts": {
-    "app": "node build/bin/app",
+    "app": "nodemon build/bin/app --watch build/bin --watch app --ext js,json",
     "build": "npm run vite-build",
     "start": "node build/bin/start.js",
     "icon": "node build/bin/icon",
@@ -109,9 +109,11 @@
     "axios": "1.12.2",
     "basic-ftp": "^5.0.5",
     "commander": "12.1.0",
+    "dayjs": "^1.11.19",
     "diffie-hellman": "^5.0.3",
     "electerm-sync": "1.2.1",
-    "electron-log": "4.3.5",
+    "electron-log": "^5.4.3",
+    "escape-string-regexp": "^5.0.0",
     "express": "4.21.2",
     "express-ws": "5.0.2",
     "fast-deep-equal": "3.1.3",
